Updated title, hopefully fix problems on iOS

--- a/src/css/locales.less
+++ b/src/css/locales.less
@@ -32,7 +32,6 @@
 
   .race-block {
     .flex(0 1 33%);
-    width: 33%;
     font-family: @df-sans;
 
     @media @tablet {
