--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -165,11 +165,6 @@ nav.sections {
   }
 }
 
-.dont-miss {
-  // max-width: 600px;
-  margin: auto;
-}
-
 .card {
   background: white;
   border-top: 1px solid @df-light-gray;
